@@ -16,7 +16,7 @@
 		<picocli.version>4.7.5</picocli.version>
 		<native.image.version>0.9.1-SNAPSHOT</native.image.version>
 		<jline.version>3.24.1</jline.version>
-		<maverick.synergy.version>3.1.0-SNAPSHOT</maverick.synergy.version>
+		<maverick.synergy.version>3.1.1</maverick.synergy.version>
 
 		<build.phase>continuous</build.phase>
 		<build.mediaTypes>
@@ -127,14 +127,25 @@
 					</execution>
 				</executions>
 			</plugin>
+			
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-jar-plugin</artifactId>
 			</plugin>
+			
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <argLine>--enable-preview --enable-native-access=com.sshtools.pty4j</argLine>
+                </configuration>
+            </plugin>
+            
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<configuration>
+					<enablePreview>true</enablePreview>
 					<annotationProcessorPaths>
 						<path>
 							<groupId>info.picocli</groupId>
